[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.38.0",
    "ipython>=9.4.0",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "pydantic>=2.11.7",
]
